obtener pacientes con filtros
